--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -4,10 +4,27 @@ on:
     branches:
       - development
 jobs:
-  install-and-test:
+  install-depedency:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
           npm install
+
+build-android:
+    needs: install-depedency
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm install
+      - name: Build Android Release
+        run: |
+          cd android && ./gradlew assembleRelease
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release.apk
+          path: android/app/build/outputs/apk/release/
