--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm i @react-native-community/cli-platform-android
       - name: Build Android Release
         run: |
           cd android && chmod +x gradlew && ./gradlew assembleRelease
