adding automated test schema

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -43,9 +43,9 @@ jobs:
         host: ${{ secrets.HOST_SERVER }}
         username: ${{ secrets.USERNAME_SERVER }}
         password: ${{ secrets.PASSWORD_SERVER }}
-        port: 2121
+        port: 4345
         source: /home/runner/work/demoyummycorp-mobile/demoyummycorp-mobile/app-release.apk
-        target: "~/apps/mobile"
+        target: "~/apps-mobile"
 
   install-apk-to-emu:
     needs: deploy
@@ -57,5 +57,18 @@ jobs:
         host: ${{ secrets.HOST_SERVER }}
         username: ${{ secrets.USERNAME_SERVER }}
         password: ${{ secrets.PASSWORD_SERVER }}
-        port: 2121
-        script: sh ~/apps/installapk.sh
+        port: 4345
+        script: adb devices && adb install -r ~/apps-mobile/github/workspace/app-release.apk/app-release.apk
+
+  automated-test-apk:
+    needs: install-apk-to-emu
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_SERVER }}
+        username: ${{ secrets.HOST_SERVER }}
+        password: ${{ secrets.HOST_SERVER }}
+        port: 4345
+        script: cd ~/appium-autotest && mvn clean test
